--- a/MyProject/MyProject.ioc
+++ b/MyProject/MyProject.ioc
@@ -38,19 +38,17 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=VP_RTC_VS_RTC_Calendar
-Mcu.Pin11=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin12=VP_SYS_VS_tim1
-Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PH0 - OSC_IN
-Mcu.Pin3=PH1 - OSC_OUT
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=VP_CRC_VS_CRC
-Mcu.Pin9=VP_RTC_VS_RTC_Activate
-Mcu.PinsNb=14
+Mcu.Pin10=VP_SYS_VS_tim1
+Mcu.Pin11=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin2=PA2
+Mcu.Pin3=PA3
+Mcu.Pin4=PA5
+Mcu.Pin5=PA6
+Mcu.Pin6=VP_CRC_VS_CRC
+Mcu.Pin7=VP_RTC_VS_RTC_Activate
+Mcu.Pin8=VP_RTC_VS_RTC_Calendar
+Mcu.Pin9=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -85,10 +83,6 @@ PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
-PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
-PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
-PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -116,8 +110,8 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
-RCC.48MHZClocksFreq_Value=42000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
 RCC.APB1Freq_Value=42000000
@@ -133,22 +127,22 @@ RCC.HCLKFreq_Value=84000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=96000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQCLKFreq_Value,RCC_RTC_Clock_SourceVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FLatency-AdvancedSettings,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLN,PLLP,PLLQCLKFreq_Value,RCC_RTC_Clock_Source,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=84000000
 RCC.PLLCLKFreq_Value=84000000
-RCC.PLLM=8
-RCC.PLLN=84
-RCC.PLLQCLKFreq_Value=42000000
-RCC.RCC_RTC_Clock_SourceVirtual=RCC_RTCCLKSOURCE_LSE
+RCC.PLLN=336
+RCC.PLLP=RCC_PLLP_DIV4
+RCC.PLLQCLKFreq_Value=84000000
+RCC.RCC_RTC_Clock_Source=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SYSCLKFreq_VALUE=84000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInputFreq_Value=2000000
+RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=1000000
-RCC.VCOOutputFreq_Value=168000000
+RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=96000000
 RTC.Alarm=RTC_ALARM_A
 RTC.AlarmMaskDateWeekDay=RTC_ALARMMASK_DATEWEEKDAY
