--- a/NUCLEO-F411RE/NUCLEO-F411RE.ioc
+++ b/NUCLEO-F411RE/NUCLEO-F411RE.ioc
@@ -23,6 +23,7 @@ Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
+GPIO.groupedBy=Show All
 IWDG.IPParameters=Prescaler,Reload
 IWDG.Prescaler=IWDG_PRESCALER_256
 IWDG.Reload=625
@@ -86,6 +87,8 @@ PA3.Signal=USART2_RX
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_ModeDefaultEXTI
+PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB5.Locked=true
 PB5.Signal=GPXTI5
 PB8.Locked=true
@@ -119,13 +122,13 @@ ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=MyProject.ioc
-ProjectManager.ProjectName=MyProject
+ProjectManager.ProjectFileName=NUCLEO-F411RE.ioc
+ProjectManager.ProjectName=NUCLEO-F411RE
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-false,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_IWDG_Init-IWDG-false-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_RTC_Init-RTC-true-HAL-false,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_IWDG_Init-IWDG-true-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
