--- a/NUCLEO-F411RE/NUCLEO-F411RE.ioc
+++ b/NUCLEO-F411RE/NUCLEO-F411RE.ioc
@@ -42,25 +42,26 @@ Mcu.IP9=USART2
 Mcu.IPNb=10
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC14-OSC32_IN
-Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=VP_CRC_VS_CRC
-Mcu.Pin11=VP_IWDG_VS_IWDG
-Mcu.Pin12=VP_RTC_VS_RTC_Activate
-Mcu.Pin13=VP_RTC_VS_RTC_Calendar
-Mcu.Pin14=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin15=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin16=VP_SYS_VS_Systick
-Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin3=PA2
-Mcu.Pin4=PA3
-Mcu.Pin5=PA5
-Mcu.Pin6=PA6
-Mcu.Pin7=PB5
-Mcu.Pin8=PB8
-Mcu.Pin9=PB9
-Mcu.PinsNb=18
+Mcu.Pin0=PC13-ANTI_TAMP
+Mcu.Pin1=PC14-OSC32_IN
+Mcu.Pin10=PB9
+Mcu.Pin11=VP_CRC_VS_CRC
+Mcu.Pin12=VP_IWDG_VS_IWDG
+Mcu.Pin13=VP_RTC_VS_RTC_Activate
+Mcu.Pin14=VP_RTC_VS_RTC_Calendar
+Mcu.Pin15=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin16=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin3=PA0-WKUP
+Mcu.Pin4=PA2
+Mcu.Pin5=PA3
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PB5
+Mcu.Pin9=PB8
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -70,6 +71,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -103,6 +105,8 @@ PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
+PC13-ANTI_TAMP.Locked=true
+PC13-ANTI_TAMP.Signal=GPXTI13
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -134,7 +138,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-false,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_IWDG_Init-IWDG-true-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CRC_Init-CRC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_USART2_UART_Init-USART2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_IWDG_Init-IWDG-true-HAL-true,9-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=84000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -177,6 +181,8 @@ RTC.AlarmMaskSeconds=RTC_ALARMMASK_SECONDS
 RTC.Format=RTC_FORMAT_BIN
 RTC.IPParameters=Alarm,Seconds_A,Format,AlarmMaskDateWeekDay,AlarmMaskHours,AlarmMaskMinutes,AlarmMaskSeconds
 RTC.Seconds_A=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
