--- a/NUCLEO-F411RE/NUCLEO-F411RE.ioc
+++ b/NUCLEO-F411RE/NUCLEO-F411RE.ioc
@@ -51,7 +51,7 @@ Mcu.Pin13=VP_RTC_VS_RTC_Activate
 Mcu.Pin14=VP_RTC_VS_RTC_Calendar
 Mcu.Pin15=VP_RTC_VS_RTC_WakeUp_intern
 Mcu.Pin16=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin17=VP_SYS_VS_Systick
+Mcu.Pin17=VP_SYS_VS_tim5
 Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PA0-WKUP
@@ -83,6 +83,9 @@ NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.RTC_WKUP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:true\:false\:true\:false\:true
+NVIC.TimeBase=TIM5_IRQn
+NVIC.TimeBaseIP=TIM5
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA0-WKUP.Locked=true
@@ -206,8 +209,8 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
 VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim5.Mode=TIM5
+VP_SYS_VS_tim5.Signal=SYS_VS_tim5
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-F411RE
