--- a/NUCLEO-F411RE/NUCLEO-F411RE.ioc
+++ b/NUCLEO-F411RE/NUCLEO-F411RE.ioc
@@ -24,10 +24,11 @@ Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=4
-FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_NEWLIB_REENTRANT,FootprintOK,HEAP_NUMBER
+FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_NEWLIB_REENTRANT,FootprintOK,HEAP_NUMBER,copyHeapFile
 FREERTOS.Tasks01=defaultTask,0,1024,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=0
-FREERTOS.configUSE_NEWLIB_REENTRANT=0
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
+FREERTOS.copyHeapFile=0
 File.Version=6
 GPIO.groupedBy=Show All
 IWDG.IPParameters=Prescaler,Reload
