--- a/NUCLEO-F411RE/NUCLEO-F411RE.ioc
+++ b/NUCLEO-F411RE/NUCLEO-F411RE.ioc
@@ -25,7 +25,7 @@ Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphData
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=4
 FREERTOS.IPParameters=Tasks01,configENABLE_FPU,configUSE_NEWLIB_REENTRANT,FootprintOK,HEAP_NUMBER,copyHeapFile,configUSE_TIMERS
-FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;terminalTask,-3,128,StartTerminalTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;terminalTask,-3,128,StartTerminalTask,Default,NULL,Dynamic,NULL,NULL;lsm6dslTask,-3,256,StartLsm6dslTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configENABLE_FPU=0
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 FREERTOS.configUSE_TIMERS=1
