--- a/NUCLEO-F411RE/NUCLEO-F411RE.ioc
+++ b/NUCLEO-F411RE/NUCLEO-F411RE.ioc
@@ -23,9 +23,11 @@ Dma.USART2_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.USART2_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART2_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_TIMERS,configUSE_NEWLIB_REENTRANT,copyHeapFile
-FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_TIMERS,configUSE_NEWLIB_REENTRANT,copyHeapFile,configUSE_TICKLESS_IDLE,configUSE_IDLE_HOOK
+FREERTOS.Tasks01=defaultTask,3,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configUSE_IDLE_HOOK=1
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
+FREERTOS.configUSE_TICKLESS_IDLE=1
 FREERTOS.configUSE_TIMERS=1
 FREERTOS.copyHeapFile=0
 File.Version=6
